--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </header>
     <main>
         <p>hallo wereld!</p>
+        <p>oei toch nog wat text erbij se</p>
     </main>
     <footer>
 
