--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitHub uitproberen</title>
+
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     <header>
@@ -12,6 +14,7 @@
     <main>
         <p>hallo wereld!</p>
         <p>oei toch nog wat text erbij se</p>
+        <p><img src="./img/lemmy1.jpg" alt="mijn hond lemmy"></p>
     </main>
     <footer>
 
