--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <p>hallo wereld!</p>
         <p>oei toch nog wat text erbij se</p>
         <p><img src="./img/lemmy1.jpg" alt="mijn hond lemmy"></p>
-        <p>we missen toch nog wat tekst</p>
+        <p>we missen toch nog wat extra tekst</p>
+
     </main>
     <footer>
 
